--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,13 @@
+
+.container{
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 10px
+}
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+}
+
 @import "./views/views.scss";
+@import "/src/components/components.scss";
