--- a/src/components/MakePostComponent/MakePost.scss
+++ b/src/components/MakePostComponent/MakePost.scss
@@ -32,7 +32,7 @@
         font-size: 20px;
         text-transform: uppercase;
         &:disabled{
-            background-color: red;
+            background-color: grey;
         }
     }
 }
