--- a/src/components/postCardComponent/_postCard.scss
+++ b/src/components/postCardComponent/_postCard.scss
@@ -13,7 +13,8 @@ $black: #000;
             margin-right: 30px;
             width: 50px;
             height: 50px;
-            object-fit: contain;
+            object-fit: cover;
+            border-radius: 50%;
         }
     }
     &__name{
