reorganize all scss and styles

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,1 +1,5 @@
 @import "./postCardComponent/postCard";
+@import "./formUserComponent/formUser.scss";
+@import "./commentInPostComponent/commentInPost.scss";
+@import "./headerComponent/header.scss";
+@import "./MakePostComponent/MakePost.scss";
