--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,24 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
-
+%btn{
+    display: block;
+    background: #009d00;
+    color: #fff;
+    margin: 30px auto 0;
+    padding: 15px 35px;
+    border-radius: 3px;
+    border: 0;
+    font-weight: 400;
+    outline: none;
+    font-size: 15px;
+    &:disabled{
+        background-color: #464548;
+        color: gray;
+    }
+}
+.btn{
+    @extend %btn;
+}
 @import "./views/views.scss";
 @import "/src/components/components.scss";
