--- a/src/components/MakePostComponent/MakePost.scss
+++ b/src/components/MakePostComponent/MakePost.scss
@@ -22,17 +22,18 @@
     }
     button{
         display: block;
-        background: rgb(54, 168, 255);
+        background: #009d00;
         color: #fff;
         margin: 30px auto 0;
-        padding: 10px;
-        border-radius: 10px;
+        padding: 15px 35px;
+        border-radius: 3px;
         border: 0;
+        font-weight: 400;
         outline: none;
-        font-size: 20px;
-        text-transform: uppercase;
+        font-size: 15px;
         &:disabled{
-            background-color: grey;
+            background-color: #464548;
+            color: gray;
         }
     }
 }
