--- a/src/components/postCardComponent/_postCard.scss
+++ b/src/components/postCardComponent/_postCard.scss
@@ -1,11 +1,11 @@
-$primary-color: #d3d3d3;
+$primary-color: #f3f3f5;
 $white: #fff;
 $black: #000;
 $color_text: #141414;
 .post-card{
     background-color: $primary-color;
     margin: 30px 0;
-    padding: 20px;
+    padding: 28px;
     border-radius: 10px;
     &__information{
         display: flex;
@@ -40,10 +40,11 @@ $color_text: #141414;
             align-items: center;
             width: fit-content;
             margin: 0 10px;
-            padding: 5px 30px;
-            border-radius: 10px;
-            border: 1px solid #004c00;
-            color: #004c00;
+            padding: 12px 30px;
+            border-radius: 3px;
+            border: 1px solid #009d00;
+            color: #009d00;
+            background: $white;
             &:first-child{
                 margin-left: 0;
             }
@@ -60,11 +61,12 @@ $color_text: #141414;
                 height: 30px;
             }
             &.like{
-
             }
         }
     }
     .cotainer-comment{
+        display: flex;
+        flex-wrap: wrap;
         input{
             margin-top: 20px;
             border-radius: 10px;
@@ -76,7 +78,7 @@ $color_text: #141414;
             display: block;
             width: 100%;
             color: $black;
-            margin-bottom: 10px;
+            margin-bottom: 16px;
             &::placeholder{
                 color: $black;
                 transform: translateY(-10px);
@@ -85,11 +87,18 @@ $color_text: #141414;
         .comment-btn{
             border: 0;
             outline: 0;
-            background-color: #004c00;
+            background-color: #009d00;
             color: $white;
             border-radius: 5px;
             padding: 8px 18px;
             font-weight: 600;
+            text-transform: capitalize;
+        }
+        .comment{
+            img{
+                width: 15px;
+                height: 15px;
+            }
         }
     }
 }
