--- a/src/styles/views/_register.scss
+++ b/src/styles/views/_register.scss
@@ -35,16 +35,7 @@
                 font-weight: bold;
             }
             button{
-                margin-top: 30px;
-                border-radius: 3px;
-                width: 100%;
-                display: block;
-                padding: 10px;
-                border: 0;
-                background: rgb(54, 168, 255);
-                font-weight: bold;
-                text-transform: uppercase;
-                font-size: 1rem;
+                margin-bottom: 30px;
             }
         }
     }
