--- a/src/styles/views/_login.scss
+++ b/src/styles/views/_login.scss
@@ -33,5 +33,8 @@
             display: block;
             font-weight: bold;
         }
+        button{
+            margin-bottom: 30px;
+        }
     }
 }
